--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
                 <h1>Neymar Jr</h1>
             </div>
             <div class="conteiner-links">
-                <a href="" target="_blank">
+                <a href="https://www.youtube.com/neymarjr" target="_blank">
                     <img src="img/youtube.png">
                     <p>Siga meu canal no Youtube</p>
                 </a>
-                <a href="" target="_blank">
+                <a href="https://www.instagram.com/neymarjrsiteoficial/" target="_blank">
                     <img src="img/instagram.png">
                     <p>Me siga no Instagram</p>
                 </a>
-                <a href="" target="_blank">
+                <a href="https://x.com/neymarjr" target="_blank">
                     <img src="img/twitter.png">
                     <p>Me siga no Twitter</p>
                 </a>
-                <a href="" target="_blank">
+                <a href="https://www.facebook.com/neymarjr/" target="_blank">
                     <img src="img/facebook.png">
                     <p>Me siga no Facebook</p>
                 </a>
-                <a href="" target="_blank">
+                <a href="https://www.twitch.tv/neymarjr" target="_blank">
                     <img src="img/twitch.png">
                     <p>Me siga no twitch</p>
                 </a>
